--- a/contenido/hipertexto.html
+++ b/contenido/hipertexto.html
@@ -1,5 +1,5 @@
 <h2>¿Qué es el Hipertexto?</h2>
-<p>El hipertexto es un texto que contiene enlaces (hipervínculos) a otros textos. El lector puede seguir los enlaces en el orden que prefiera, permitiendo una lectura no lineal y exploratoria.</p>
-<p>Es el concepto fundamental sobre el que se construye la World Wide Web. Antes de la web, ya existían sistemas de hipertexto, pero fue la combinación de HTML, HTTP y los navegadores lo que lo popularizó masivamente.</p>
-<p>Desde aquí, podrías volver a leer sobre el <a href="contenido/proyecto-xanadu.html">Proyecto Xanadu</a> para ver la conexión.</p>
+<p>El hipertexto es texto que contiene enlaces a otros textos, permitiendo una lectura no lineal. Es el concepto fundamental sobre el que se construye la web.</p>
+<p>La idea no es nueva; se remonta al concepto del "Memex" de <a href="contenido/vannevar-bush.html">Vannevar Bush</a> en 1945, un dispositivo teórico para almacenar y vincular información.</p>
+<p>Desde aquí, podrías explorar la implementación más famosa de esta idea: el <a href="contenido/proyecto-xanadu.html">Proyecto Xanadu</a>.</p>
 
