--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id="show-graph-btn">Ver Mapa</button>
 
     <main id="main-container">
-        <!-- El panel inicial se mantiene igual -->
+        <!-- El panel inicial -->
         <article class="panel" data-path='["Punto de Partida"]' data-id="Punto de Partida">
             <header>
                 <h1>Punto de Partida</h1>
@@ -50,4 +50,6 @@
 
 </body>
 </html>
+
+
 
