--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Proyecto Hipertextual</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- CORRECCIÓN: Se asegura de importar Open Sans -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <!-- Librería para la visualización del grafo -->
@@ -18,18 +17,27 @@
     <button id="show-graph-btn">Ver Mapa</button>
 
     <main id="main-container">
-        <!-- El panel inicial -->
+        <!-- El panel inicial con contenido extendido -->
         <article class="panel" data-path='["Punto de Partida"]' data-id="Punto de Partida">
             <header>
                 <h1>Punto de Partida</h1>
             </header>
             <section class="panel-content">
-                <p>Bienvenido a este experimento de navegación hipertextual. Cada enlace que encuentres no te llevará a otra página, sino que abrirá un nuevo panel a tu derecha, creando una línea de pensamiento visual y continua.</p>
-                <p>Esta estructura permite mantener el contexto original mientras exploras nuevas ideas, un concepto inspirado en la visión del <a href="contenido/proyecto-xanadu.html">Proyecto Xanadu</a>.</p>
-                <p>Puedes empezar explorando algunos temas relacionados:</p>
+                <p>
+                    Bienvenido a este espacio de exploración conceptual. Lo que tienes ante ti no es una página web convencional, sino un experimento sobre la naturaleza de la lectura y la conexión de ideas. Cada enlace que encuentres no te expulsará a una nueva pestaña ni reemplazará tu vista actual; en su lugar, desplegará un nuevo panel a tu derecha, creando una secuencia visual y continua de pensamiento. Esta interfaz está diseñada para que el contexto nunca se pierda, permitiendo que cada nueva idea se ramifique desde su origen sin abandonar el rastro.
+                </p>
+                <p>
+                    Esta estructura se inspira directamente en las visiones más puras del <a href="contenido/hipertexto.html">hipertexto</a>, un concepto que busca imitar la forma asociativa en que funciona nuestra mente. En lugar de seguir el camino lineal impuesto por el libro impreso, aquí se te invita a construir tu propio viaje intelectual. La disposición horizontal te permite retroceder visualmente, reexaminar conexiones y comprender la genealogía de tu exploración. Es un lienzo que se expande con tu curiosidad.
+                </p>
+                <p>
+                    El espíritu de este proyecto bebe de la ambición del <a href="contenido/proyecto-xanadu.html">Proyecto Xanadu</a>, pero se ejecuta con una filosofía de <a href="contenido/diseno-minimalista.html">diseño minimalista</a>. Busca la potencia a través de la simplicidad, ofreciendo una herramienta para pensar sin las distracciones de las interfaces modernas.
+                </p>
+                <p>
+                    Para comenzar tu recorrido, puedes explorar los conceptos fundamentales que dan forma a esta experiencia:
+                </p>
                 <ul>
-                    <li><a href="contenido/hipertexto.html">¿Qué es el hipertexto?</a></li>
-                    <li><a href="contenido/diseno-minimalista.html">Sobre el diseño minimalista</a></li>
+                    <li><a href="contenido/hipertexto.html">¿Qué es el hipertexto?</a>: El pilar conceptual de esta navegación.</li>
+                    <li><a href="contenido/vannevar-bush.html">Vannevar Bush</a>: El visionario que imaginó un futuro de conocimiento interconectado.</li>
                 </ul>
             </section>
             <footer class="panel-footer">
